--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -16,13 +16,23 @@
     <p class="card-text">Opening Time: {{restaurant.opening_time}}</p>
     <p class="card-text">Closing Time: {{restaurant.closing_time}}</p>
     <div class="row text-center">
-        <div class="col-md-6">
+        <div class="col-md-4">
             <a href="{% url 'restaurant-update' restaurant.id %}" class="btn btn-outline-primary btn-block">Update</a>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
             <a href="{% url 'restaurant-delete' restaurant.id %}" class="btn btn-outline-danger btn-block">Delete</a>
+        </div>
+        <div class="col-md-4">
+            <a href="{% url 'item-create' restaurant.id %}" class="btn btn-outline-info btn-block">Add Item</a>
         </div>
     </div>
   </div>
 </div>
+  <div class="row">
+    <ul>
+    {% for item in items %}
+      <li>Item: {{ item.name }}<br>Description: {{ item.description }}<br>Price: {{ item.price }}</li>
+    {% endfor %}
+    </ul>
+  </div>
 {% endblock content %}
